50% of team-section

--- a/index.html
+++ b/index.html
@@ -11,38 +11,36 @@
     <div class="wrapper">
         <header class="header">
             <div class="container header__container">
-                <div class="wrap__header">
-                    <div class="logo">
-                        <a href="index.html" class="logo__link">
-                            <img src="img/logo/logo.png" alt="Mr burger">
-                        </a>
-                    </div>
-                    <nav class="nav">
-                        <ul class="header__list">
-                            <li class="header__item">
-                                <a href="#" class="header__item-link">О нас</a>
-                            </li>
-                            <li class="header__item">
-                                <a href="#" class="header__item-link">Бургеры</a>
-                            </li>
-                            <li class="header__item">
-                                <a href="#" class="header__item-link">Команда</a>
-                            </li>
-                            <li class="header__item">
-                                <a href="#" class="header__item-link">Меню</a>
-                            </li>
-                            <li class="header__item">
-                                <a href="#" class="header__item-link">Отзывы</a>
-                            </li>
-                            <li class="header__item">
-                                <a href="#" class="header__item-link">Контакты</a>
-                            </li>
-                        </ul>
-                    </nav>
-                    <button class="header__btn">
-                        Заказать
-                    </button>
+                <div class="logo">
+                    <a href="index.html" class="logo__link">
+                        <img src="img/logo/logo.png" alt="Mr burger">
+                    </a>
                 </div>
+                <nav class="nav">
+                    <ul class="header__list">
+                        <li class="header__item">
+                            <a href="#" class="header__item-link">О нас</a>
+                        </li>
+                        <li class="header__item">
+                            <a href="#" class="header__item-link">Бургеры</a>
+                        </li>
+                        <li class="header__item">
+                            <a href="#" class="header__item-link">Команда</a>
+                        </li>
+                        <li class="header__item">
+                            <a href="#" class="header__item-link">Меню</a>
+                        </li>
+                        <li class="header__item">
+                            <a href="#" class="header__item-link">Отзывы</a>
+                        </li>
+                        <li class="header__item">
+                            <a href="#" class="header__item-link">Контакты</a>
+                        </li>
+                    </ul>
+                </nav>
+                <button class="header__btn">
+                    Заказать
+                </button>
             </div>
         </header>
         <section class="section natural">
@@ -82,30 +80,53 @@
             </div>
         </section>
         <section class="section team">
-            <div class="container team__container">
-                <div class="team__description">
+            <div class="team__description">
+                <div class="container team__container">
                     <h1 class="title team__tittle">Команда</h1>
-                    <ul class="team__lis">
-                        <li class="team__item">
-                            <a href="#" class="team__link">Дэниэл Редклиф</a>
-                        </li>
-                        <li class="team__item">
-                            <a href="#" class="team__link">Ричард Джеймс</a>
-                            <div class="team__link-more">
-                                <img src="img/ava/team-ava.png" alt="Оператор" class="team__more-ava">
-                                <div class="team__link-content">
-                                    <h2 class="team__more-tittle">Оператор</h2>
-                                    <p class="team__more-text">С радостью поможет подобрать идеальный бургер и оформить заказ.  </p>
+                    <div class="team__accordion">
+                        <ul class="team__lis">
+                            <li class="team__item">
+                                <a href="#" class="team__link">Дэниэл Редклиф</a>
+                                <div class="team__link-more">
+                                    <img src="img/ava/team-ava.png" alt="Оператор" class="team__more-ava">
+                                    <div class="team__link-content">
+                                        <h2 class="team__more-tittle">Оператор</h2>
+                                        <p class="team__more-text">С радостью поможет подобрать идеальный бургер и оформить заказ.  </p>
+                                    </div>
                                 </div>
-                            </div>
-                        </li>
-                        <li class="team__item">
-                            <a href="#" class="team__link">Джейк Финн</a>
-                        </li>
-                        <li class="team__item">
-                            <a href="#" class="team__link">Николай Иванов</a>
-                        </li>
-                    </ul>
+                            </li>
+                            <li class="team__item">
+                                <a href="#" class="team__link">Ричард Джеймс</a>
+                                <div class="team__link-more">
+                                    <img src="img/ava/team-ava.png" alt="Оператор" class="team__more-ava">
+                                    <div class="team__link-content">
+                                        <h2 class="team__more-tittle">Оператор</h2>
+                                        <p class="team__more-text">С радостью поможет подобрать идеальный бургер и оформить заказ.  </p>
+                                    </div>
+                                </div>
+                            </li>
+                            <li class="team__item">
+                                <a href="#" class="team__link">Джейк Финн</a>
+                                <div class="team__link-more">
+                                    <img src="img/ava/team-ava.png" alt="Оператор" class="team__more-ava">
+                                    <div class="team__link-content">
+                                        <h2 class="team__more-tittle">Оператор</h2>
+                                        <p class="team__more-text">С радостью поможет подобрать идеальный бургер и оформить заказ.  </p>
+                                    </div>
+                                </div>
+                            </li>
+                            <li class="team__item">
+                                <a href="#" class="team__link">Николай Иванов</a>
+                                <div class="team__link-more">
+                                    <img src="img/ava/team-ava.png" alt="Оператор" class="team__more-ava">
+                                    <div class="team__link-content">
+                                        <h2 class="team__more-tittle">Оператор</h2>
+                                        <p class="team__more-text">С радостью поможет подобрать идеальный бургер и оформить заказ.  </p>
+                                    </div>
+                                </div>
+                            </li>
+                        </ul>
+                    </div>
                 </div>
             </div>
         </section>
