--- a/index.html
+++ b/index.html
@@ -130,6 +130,45 @@
                 </div>
             </div>
         </section>
+        <section class="section menu">
+            <div class="container menu__container">
+                <h1 class="title menu__tittle">Меню</h1>
+                <div class="menu__accordion">
+                    <ul class="menu__list">
+                        <li class="menu__item">
+                            <a href="#" class="menu__link">
+                                <div class="menu__link-for menu__link-for-meat">
+                                    <h2 class="menu__subtittle">Для мясоедов</h2>
+                                </div>
+                            </a>
+                            <div class="menu__more menu__more-meat">
+                                <p class="menu__more-text">Lorem ipsum dolor sit amet, consectetur adipisicing elit. Dolorem eos esse quaerat quam sed voluptates. Aliquam eligendi excepturi, minima numquam obcaecati optio porro quos tempora? Beatae facere illum saepe tempore?</p>
+                            </div>
+                        </li>
+                        <li class="menu__item">
+                            <a href="#" class="menu__link">
+                                <div class="menu__link-for menu__link-for-veg">
+                                    <h2 class="menu__subtittle">Вегетарианское</h2>
+                                </div>
+                            </a>
+                            <div class="menu__more menu__more-veg">
+                                <p class="menu__more-text">Lorem ipsum dolor sit amet, consectetur adipisicing elit. Beatae consequatur consequuntur illo, illum impedit laborum natus, placeat praesentium provident quam quasi qui quis quo. At eum minima quisquam recusandae repellat.</p>
+                            </div>
+                        </li>
+                        <li class="menu__item">
+                            <a href="#" class="menu__link">
+                                <div class="menu__link-for menu__link-for-diet">
+                                    <h2 class="menu__subtittle">Диетическое</h2>
+                                </div>
+                            </a>
+                            <div class="menu__more menu__more-diet">
+                                <p class="menu__more-text">Lorem ipsum dolor sit amet, consectetur adipisicing elit. Ab ad aliquid at beatae delectus doloribus earum eligendi esse fugiat harum ipsum itaque labore, provident qui quis saepe sapiente ut voluptatibus?</p>
+                            </div>
+                        </li>
+                    </ul>
+                </div>
+            </div>
+        </section>
         <section class="section staff">
             <div class="staff__ava staff__ava-1">
                 <div class="staff__ava-more">
